# policyNIM

./: .dockerignore  .env.development.example  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.railway  README.md  packmind.json  plan.md  pyproject.toml  pyrightconfig.json  railway.toml
.github/workflows/: ci.yml
.plan/: day-4-execution-plan.md  day-6-execution-plan.md
.plan/hosted-mcp-beta/: day-2-execution-plan.md
.plan/runtime-decision-evidence-mvp/: day-5-execution-plan.md
.threadloop/: config.json
docs/: architecture-diagram.md  architecture.md  contributor-guide.md  demo-script.md  hosted-beta-operations.md  index.md  limitations.md  public-source-grounding.md  workflows.md
evals/: default_cases.json
examples/claude-code/: README.md
examples/codex/: README.md
packaging/: pyinstaller.spec
policies/: TEMPLATE.md
policies/architecture/: api-versioning-guidance.md  background-job-design-rules.md
policies/backend/: backend-logging-standard.md  config-validation-and-fail-closed.md  request-correlation-and-tracing-standard.md
policies/security/: auth-sensitive-code-review-standard.md  secrets-redaction-and-handling.md  session-lifetime-and-token-boundaries.md
scripts/: install.ps1  install.sh
src/policynim/: __init__.py  config_discovery.py  contracts.py  errors.py  runtime_paths.py  settings.py  types.py
src/policynim/assets/beta/: beta-page.js  beta-theme-init.js  beta.css
src/policynim/ingest/: __init__.py  chunking.py  loader.py  parser.py
src/policynim/interfaces/: __init__.py  cli.py  mcp.py
src/policynim/providers/: __init__.py  nvidia.py  nvidia_eval.py  nvidia_guardrails.py
src/policynim/services/: __init__.py  beta_auth.py  compiler.py  conformance.py  dump.py  eval.py  evidence_trace.py  health.py  ingest.py  preflight.py  regeneration.py  router.py  runtime_decision.py  runtime_evidence_report.py  runtime_execution.py  search.py
src/policynim/storage/: __init__.py  auth_store.py  lancedb.py  runtime_evidence.py
src/policynim/templates/beta/: dashboard.html.j2  landing.html.j2  page.html.j2
tests/: README.md  test_auth_store.py  test_beta_auth.py  test_beta_portal.py  test_cli.py  test_compiler_service.py  test_docker_build_live.py  test_dockerfile_contract.py  test_docs_hosted_onboarding.py  test_docs_runtime_workflows.py  test_eval_service.py  test_health_service.py  test_hosted_mcp_live.py  test_ingest.py  test_ingest_service.py  test_installer_contract.py  test_lancedb.py  test_mcp.py  test_nemo_agent_toolkit_policy_conformance.py  test_nemo_evaluator_policy_conformance.py  test_nemo_guardrails_preflight_generator.py  test_nvidia_embedder.py  test_nvidia_generator.py  test_nvidia_live.py  test_nvidia_policy_compiler.py  test_nvidia_policy_conformance.py  test_nvidia_reranker.py  test_policy_conformance_service.py  test_policy_evidence_trace_service.py  test_policy_regeneration_service.py  test_preflight_service.py  test_router_service.py  test_runtime_decision_service.py  test_runtime_evidence_report_service.py  test_runtime_evidence_store.py  test_runtime_execution_service.py  test_runtime_paths.py  test_search_service.py  test_service_factories.py  test_settings_and_types.py
(+7 files in other folders)
