[project]
name = "policynim"
version = "0.1.0"
description = "A policy-aware NVIDIA NIM engineering preflight layer for AI coding agents."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "mcp[cli]>=1.17.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "typer>=0.16.0",
]

[project.scripts]
policynim = "policynim.interfaces.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

