[project]
name = "policynim"
version = "0.1.0"
description = "A policy-aware NVIDIA NIM engineering preflight layer for AI coding agents."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "evidently==0.7.16",
  "httpx==0.28.1",
  "itsdangerous==2.2.0",
  "jinja2==3.1.6",
  "lancedb==0.27.1",
  "markdown-it-py==4.0.0",
  "mcp[cli]==1.26.0",
  "openai==2.29.0",
  "pandas==2.2.3",
  "platformdirs==4.5.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "typer==0.24.1",
]

[project.optional-dependencies]
nvidia-eval = [
  "nemo-evaluator==0.2.5",
  "nvidia-nat-eval==1.6.0",
  "nvidia-simple-evals==26.3",
]
# NeMo Evaluator Launcher is documented as a separate-environment path because
# the checked launcher stack conflicts with this project's pinned httpx/evidently
# requirements.

[project.scripts]
policynim = "policynim.interfaces.cli:main"

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policynim"]

[tool.hatch.build.targets.wheel.force-include]
"policies" = "policynim/policies"
"evals" = "policynim/evals"
"src/policynim/assets" = "policynim/assets"
"src/policynim/templates" = "policynim/templates"

[dependency-groups]
test = [
  "pytest==8.3.4",
]
dev = [
  "pre-commit==4.3.0",
  "ruff==0.15.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
markers = [
  "live: tests that make real NVIDIA API calls and are excluded from offline CI",
  "docker_live: tests that require a working Docker daemon and an explicit opt-in env gate",
]
